Update config file and html filenames

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 architecture designed to mimic a real-world web application.
               </p>
               <a
-                href="./project-1.html"
+                href="./cosmoMotors.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >Learn more</a
               >
@@ -217,7 +217,7 @@
                 private and browser-based.
               </p>
               <a
-                href="./project-2.html"
+                href="./pawMailMerge.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >Learn more</a
               >
@@ -244,7 +244,7 @@
                 fitness or training applications.
               </p>
               <a
-                href="./project-3.html"
+                href="./fitnessRoutineGenerator.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >Learn more</a
               >
